--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.553.0",
     "recharts": "https://aistudiocdn.com/recharts@^3.3.0",
-    "prop-types": "https://aistudiocdn.com/prop-types@^15.8.1"
+    "prop-types": "https://aistudiocdn.com/prop-types@^15.8.1",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0"
   }
 }
 </script>
